# Vocofo

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
src/: backend.rs  background_op.rs  config.rs  context.rs  event_handler.rs  file_operation.rs  ftp_backend.rs  lib.rs  local_backend.rs  main.rs  messages_enum.rs  render.rs  scp_backend.rs  sftp_backend.rs  ui.rs
src/event_handler/: clipboard.rs  command_palette.rs  connect.rs  main_handler.rs  mod.rs  popups.rs  settings.rs
src/render/: mod.rs  panels.rs  popups.rs
tests/: backend_test.rs  bulk_selection_test.rs  config_test.rs  connect_dialog_test.rs  context_test.rs  copy_paste_integration_test.rs  dual_panel_test.rs  file_operations_test.rs  navigation_and_features_test.rs  overwrite_and_sync_test.rs  search_filter_test.rs  sftp_improvements_test.rs  sftp_integration_test.rs
