[package]
name = "vocofo"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sftp", "ftp"]
sftp = ["ssh2"]
ftp = ["suppaftp"]

[dependencies]
crossterm = "0.29.0"
dirs = "5"
edit = "0.1.5"
ratatui = "0.29.0"
serde = { version = "1", features = ["derive"] }
ssh2 = { version = "0.9", optional = true }
suppaftp = { version = "6", default-features = false, optional = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
