[package]
name = "vocofo"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "A fast terminal file manager with dual panels, vim navigation, and SFTP/FTP/SCP support"
repository = "https://github.com/VoCoufi/Vocofo"
readme = "README.md"
keywords = ["file-manager", "tui", "terminal", "sftp", "ftp"]
categories = ["command-line-utilities", "filesystem"]
rust-version = "1.85"
exclude = ["CLAUDE.md", ".claude/"]

[features]
default = ["sftp", "ftp"]
sftp = ["ssh2"]
ftp = ["suppaftp"]

[dependencies]
crossterm = "0.29.0"
dirs = "5"
edit = "0.1.5"
ratatui = "0.29.0"
serde = { version = "1", features = ["derive"] }
ssh2 = { version = "0.9", optional = true }
suppaftp = { version = "6", default-features = false, optional = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
